--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
     "lucide-react": "^0.441.0",
+    "monaco-themes": "^0.4.4",
     "next": "14.2.12",
     "react": "^18",
     "react-dom": "^18",
